--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "gmgen",
+  "name": "gmgen-demos",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vite preview",
     "build": "vite build",
     "dev": "vite",
-    "preview": "vite preview",
-    "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "preview": "vite preview"
   },
   "dependencies": {
     "lodash": "^4.17.21",
@@ -19,11 +17,9 @@
     "@types/lodash": "^4.14.186",
     "@types/node": "^18.7.23",
     "@vitejs/plugin-vue": "^3.1.0",
-    "@vitest/coverage-c8": "^0.24.0",
     "autoprefixer": "^10.4.12",
     "tailwindcss": "^3.1.8",
     "vite": "^3.1.0",
-    "vitest": "^0.24.0",
     "vue-tsc": "^1.0.9"
   }
 }
