--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gmgen": "^1.0.2",
     "lodash": "^4.17.21",
     "vue": "^3.2.37",
     "vue-router": "4"
